fixes blog post search button alignment when in a column at tablet

--- a/css/widgets-blog.less
+++ b/css/widgets-blog.less
@@ -96,15 +96,14 @@
 
 		    position: relative;
 		    top: 0px;
-
-		    @media only screen 
-			and (min-device-width : 768px) 
-			and (max-device-width : 1024px) 
-			and (orientation : portrait) {
-				top: 20px;
-			}
         }
     }
+}
+
+.responsivecolumns .widget.blogsearch button {
+	@media @tablet {
+		top: 20px
+	}
 }
 
 
